# madsql

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: madsql-user-guide.md  madsql-user-overview.md
examples/input/mssql/: example_queries.sql  noGOSchema.sql
examples/input/singlestore/: nyc_taxi_queries.sql
src/madsql/: __init__.py  __main__.py  cli.py  convert.py  errors.py  infer_schema.py  io.py
tests/: test_cli.py
tests/fixtures/: conversion_cases.json  parse_failure_cases.json  translation_edge_cases.json
